err/qa-tests.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qa_tests'...
Compiling './lib/python3.5/site-packages/qa_tests/listeners.py'...
***   File "./lib/python3.5/site-packages/qa_tests/listeners.py", line 20
    print self.__output_file
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/qa_tests/multibot.py'...
***   File "./lib/python3.5/site-packages/qa_tests/multibot.py", line 133
    print "[ \x1b[31mERROR\x1b[0m ] No test suites to execute."
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/qa_tests/search'...
Compiling './lib/python3.5/site-packages/qa_tests/search/then.py'...
***   File "./lib/python3.5/site-packages/qa_tests/search/then.py", line 307
    except AssertionError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qa_tests/suggest'...
Listing './lib/python3.5/site-packages/qa_tests-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/robot'...
Listing './lib/python3.5/site-packages/robot/api'...
Listing './lib/python3.5/site-packages/robot/conf'...
Listing './lib/python3.5/site-packages/robot/htmldata'...
Listing './lib/python3.5/site-packages/robot/htmldata/common'...
Listing './lib/python3.5/site-packages/robot/htmldata/lib'...
Listing './lib/python3.5/site-packages/robot/htmldata/libdoc'...
Listing './lib/python3.5/site-packages/robot/htmldata/rebot'...
Listing './lib/python3.5/site-packages/robot/htmldata/testdoc'...
Listing './lib/python3.5/site-packages/robot/libdocpkg'...
Listing './lib/python3.5/site-packages/robot/libraries'...
Listing './lib/python3.5/site-packages/robot/model'...
Listing './lib/python3.5/site-packages/robot/output'...
Listing './lib/python3.5/site-packages/robot/output/console'...
Listing './lib/python3.5/site-packages/robot/parsing'...
Listing './lib/python3.5/site-packages/robot/reporting'...
Listing './lib/python3.5/site-packages/robot/result'...
Listing './lib/python3.5/site-packages/robot/running'...
Listing './lib/python3.5/site-packages/robot/running/arguments'...
Listing './lib/python3.5/site-packages/robot/running/timeouts'...
Compiling './lib/python3.5/site-packages/robot/running/timeouts/ironpython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/ironpython.py", line 56
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robot/running/timeouts/jython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/jython.py", line 55
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robot/utils'...
Listing './lib/python3.5/site-packages/robot/variables'...
Listing './lib/python3.5/site-packages/robot/writer'...
Listing './lib/python3.5/site-packages/robotframework-3.0.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/unicodecsv'...
Listing './lib/python3.5/site-packages/unicodecsv-0.14.1.egg-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './share'...
Listing './share/python-wheels'...
